# To-do-List

./: .gitignore  README.md  duck.js  index.html  package-lock.json  package.json  style.css  todo.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
